src/styles/action.css
@import url("../global.css");

body {
	margin: unset;
	overscroll-behavior-y: none;
	/* disables weird white scroll bounce */
	/* font-family: "Courier New", Courier, monospace; */
}

.settingsbutton {
	cursor: pointer;
	margin-left: 5px;
}

.blockbutton {
	cursor: pointer;
	align-self: center;
	padding: 5px;
	background-color: #181818;
	min-width: 290px;
	border-radius: 3px;
	display: flex;
	justify-content: center;
	/* margin-bottom: 5px; */
	user-select: none;
	font-size: medium;
	height: 42px;
	line-height: 42px;
}

.popuproot {
	background-color: #121212;
	/* width: 300px; */
	padding: 10px;
	padding-bottom: 23px;
}

.headercontainer {
	display: flex;
	flex-direction: column;
	background-color: #242424;
	border-radius: 5px;
	margin-bottom: 10px;
	padding: 5px;
}

.pophead {
	display: flex;
	/* justify-content: space-around; */
	margin-top: 0px;
	color: white;
	padding: 10px 0 10px 0;
}

.bigcard {
	/* background-color: #85937a; */
	/* background-color: #181818; */
	display: flex;
	justify-content: space-between;
	align-items: center;
	/* flex-direction: column; */
	/* border-radius: 5px; */
	color: white;
	margin-bottom: 10px;
}

.togglecontainer {
	background-color: #242424;
	padding: 5px;
	border-radius: 5px;
	user-select: none;
	cursor: pointer;
}

.toggle {
	/* padding: 5px; */
	font-size: small;
}
.toggle:last-child {
	padding-left: 5px;
}

.totaltgcount {
	font-size: large;
	font-weight: 400;
	padding: 5px 0 5px 0;
}

/* .tabgroupContainer {
	min-width: 300px;
	min-height: 42px;
	margin-bottom: -2px;
	border-radius: 5px;
	box-shadow: 5px 5px 10px #181818, -5px -5px 10px #101010;
} */

.tabgroupContainer {
	min-width: 300px;
	min-height: 55px;
	/* margin-bottom: -13px; */
	border-radius: 5px;
	/* background: #e0e0e0; */
	/* box-shadow: 10px 10px 20px #181818, -10px -10px 20px #101010; */
	box-shadow: 2px 2px 5px #181818, -2px -2px 5px #101010;
	/* overflow: hidden; */
}

.tabgroupContainer:last-child {
	min-height: 42px;
	/* border-bottom-left-radius: 0px;
	border-bottom-right-radius: 0px; */
	/* border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px; */
}

.tabgroupCard {
	line-height: 42px;
	/* border-radius: 2px; */
	display: flex;
	align-items: center;
	/* overflow: hidden; */
}
.tabgroupData {
	display: flex;
	flex: 1;
	flex-direction: row;
	align-items: center;
	user-select: none;
}

.tabgroupName {
	padding-left: 5px;
	font-weight: 400;
	font-size: medium;
}

.tabgroupCount {
	font-size: small;
	height: 18px;
	line-height: 18px;
	/* background-color: #121212; */
	background-color: rgba(255, 255, 255, 0.25);
	/* color: #000; */

	padding: 3px;
	margin-left: 10px;
	margin-right: 10px;
	border-radius: 5px;
}

.tabscontainer {
	margin-bottom: 10px;
	background-color: rgba(255, 255, 255, 0.5);
	/* overflow: hidden; */
}

.tabcard {
	align-self: center;
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 5px 0 5px 5px;
	/* background-color: white; */
	/* max-width: 280px; */
	line-height: 30px;
	height: 30px;
	/* margin: 0 5px 0 5px; */
	border-bottom: 1px solid rgba(255, 255, 255, 0.25);
}
.tabcard:last-child {
	border-bottom: unset;
}

.tabdetails {
	display: flex;
	flex: 1;
	flex-direction: row;
	align-items: center;
	user-select: none;
}

.nothing {
	display: flex;
	justify-content: center;
	color: #c2c3c7;
}

.nothing > p {
	margin-left: 5px;
	font-size: medium;
}

.addButton {
	display: flex;
	background-color: rgba(255, 255, 255, 0.1);
	padding: 5px;
	justify-content: center;
	user-select: none;
	cursor: pointer;
}

